package dao;

/**
 * Created by Alexis on 13/11/2016.
 */
public interface ArtisteDAO {
}
