CREATE TYPE GENRE_MUSIQUE AS ENUM(
  'pop', 'rock', 'jazz', 'blues', 'electronique', 'variété', 'rap'
);

CREATE TABLE UTILISATEUR(
  pseudo VARCHAR(15) PRIMARY KEY,
  motDePasse VARCHAR(25) NOT NULL,
  nom VARCHAR(15),
  prenom VARCHAR(15),
  age INTEGER CONSTRAINT age_constraint CHECK (age > 0 AND age < 99)
);

CREATE TABLE ARTISTE(
  nom VARCHAR(25) PRIMARY KEY,
  nationalite VARCHAR(50)
);

CREATE TABLE ALBUM(
  nom VARCHAR(25) PRIMARY KEY,
  nomArtiste VARCHAR(25) REFERENCES ARTISTE NOT NULL,
  annee INTEGER CONSTRAINT year_constraint CHECK (annee > 0 AND annee < 3000)
);

CREATE TABLE TITRE(
  id VARCHAR(10) PRIMARY KEY,
  nom VARCHAR(50) NOT NULL,
  duree INTEGER NOT NULL,
  nomArtiste VARCHAR(25) REFERENCES ARTISTE(nom) NOT NULL,
  nomAlbum VARCHAR(25) REFERENCES ALBUM(nom),
  genre GENRE_MUSIQUE
);

CREATE TABLE LISTE_TITRE(
  pseudoUser VARCHAR(15) REFERENCES UTILISATEUR(pseudo),
  titreId VARCHAR(10) REFERENCES TITRE(id),
  PRIMARY KEY (pseudoUser, titreId)
);

CREATE TABLE LISTE_ALBUM(
  pseudoUser VARCHAR(10) REFERENCES UTILISATEUR(pseudo),
  nomAlbum VARCHAR(25) REFERENCES ALBUM(nom),
  PRIMARY KEY (pseudoUser, nomAlbum)
);

CREATE TABLE LISTE_ARTISTE(
  pseudoUser VARCHAR(15) REFERENCES UTILISATEUR(pseudo),
  nomArtiste VARCHAR(25) REFERENCES ARTISTE(nom),
  PRIMARY KEY (pseudoUser, nomArtiste)
);

CREATE TABLE ECOUTE(
  pseudoUser VARCHAR(15) REFERENCES UTILISATEUR(pseudo),
  dateEcoute TIMESTAMP DEFAULT (NOW()::TIMESTAMP AT TIME ZONE 'UTC'),
  titreId VARCHAR(10) REFERENCES TITRE(id),
  PRIMARY KEY (pseudoUser, dateEcoute)
);

CREATE TABLE PLAYLIST(
  id VARCHAR(10) PRIMARY KEY,
  nom VARCHAR(25) NOT NULL,
  pseudoUser VARCHAR(15) REFERENCES UTILISATEUR(pseudo)
);

CREATE TABLE PLAYLIST_TITRE(
  titreId VARCHAR(10) REFERENCES TITRE(id),
  playlistId VARCHAR(10) REFERENCES PLAYLIST(id),
  PRIMARY KEY (titreId, playlistId)
);
